tests/NormalTests/paczka1/small_fuzzy/78474220.err
Error in line 2: AGY7h A840 20,08
Error in line 7: t5CJooDIcK S858 95,4
Error in line 9: cnfoUGPKP A840 62,3
Error in line 1: AGY7h S858 74,0
Error in line 14: AGY7h S837 68,2
Error in line 15: AGY7h S57 78,4
